--- a/package.json
+++ b/package.json
@@ -4,5 +4,23 @@
   "main": "lib/index.js",
   "repository": "git@github.com:korziee/helpers.git",
   "author": "Kory Porter <kory.porter@nextpracticehealth.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "ava",
+    "test:watch": "ava --watch"
+  },
+  "ava": {
+    "compileEnhancements": false,
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register/transpile-only"
+    ]
+  },
+  "devDependencies": {
+    "ava": "^2.4.0",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.4"
+  }
 }
