--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "helpers",
+  "name": "@korziee/helpers",
   "version": "1.0.0",
   "main": "lib/index.js",
   "repository": "git@github.com:korziee/helpers.git",
-  "author": "Kory Porter <kory.porter@nextpracticehealth.com>",
+  "author": "Kory Porter",
   "license": "MIT",
   "scripts": {
     "test": "ava",
